<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logo"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/nameapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/learning_stations"
         
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/iconuptc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/app_icon" 
        android:contentDescription="@string/descicon"/>

    <TextView
        android:id="@+id/TextViewpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextuser"
        android:layout_below="@+id/editTextuser"
    
        android:text="@string/pass" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextpass"
        android:layout_marginLeft="70dp"
        android:layout_toRightOf="@+id/textViewuser"
        android:text="@string/cancelar" 
    
        android:onClick="alertCancela"/>

    <EditText
        android:id="@+id/editTextpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextViewpass"
        android:layout_below="@+id/TextViewpass"
        android:ems="10" 
         android:inputType="textPassword"/>

    <TextView
        android:id="@+id/textViewuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextuser"
        android:layout_below="@+id/iconuptc"
         
        android:text="@string/user" />

    <EditText
        android:id="@+id/editTextuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewuser"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="text" />

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cancel"
        android:layout_alignBottom="@+id/cancel"
        android:layout_alignLeft="@+id/editTextpass"
        android:layout_alignRight="@+id/textViewuser"
        android:onClick="gamemode"
    
        android:text="@string/start_main" />

    <TextView
        android:id="@+id/instruccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cancel"
        android:layout_centerHorizontal="true"
        android:text="@string/instruccion"
        android:textAppearance="?android:attr/textAppearanceSmall"
 />

</RelativeLayout>
