<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logo"
     >
    

     <TextView
        android:id="@+id/nameapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/learning_stations"
   
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/iconuptc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/app_icon" 
        android:contentDescription="@string/descicon"/>

    <TextView
        android:id="@+id/modejuega"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/modevisitante"
        android:layout_alignBottom="@+id/modevisitante"
        android:layout_alignLeft="@+id/jugar"
        android:text="@string/descjuega"

        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageButton
        android:id="@+id/jugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nameapp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="120dp"
        android:contentDescription="@string/descjuega"
        android:src="@drawable/user" />

    <TextView
        android:id="@+id/instruccion1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/nameapp"
        android:layout_marginBottom="15dp"
        android:text="@string/instruccion1"
        android:textAppearance="?android:attr/textAppearanceSmall"
       />

    <TextView
        android:id="@+id/modevisitante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/visitar"
        android:layout_alignLeft="@+id/visitar"
        android:layout_marginBottom="20dp"
        android:text="@string/descvisita"
        android:textAppearance="?android:attr/textAppearanceSmall"
        />

    <ImageButton
        android:id="@+id/visitar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/instruccion1"
        android:layout_centerVertical="true"
        android:contentDescription="@string/descvisita"
        android:onClick="visitar"
        android:src="@drawable/icon_visit" />
    
</RelativeLayout>
